--- a/docs/reference/Makefile.am
+++ b/docs/reference/Makefile.am
@@ -82,6 +82,7 @@ INCLUDES=							\
 GTKDOC_LIBS=							\
 	$(top_builddir)/src/gconf-bridge.o			\
 	$(top_builddir)/src/gva-audit.o				\
+	$(top_builddir)/src/gva-categories.o			\
 	$(top_builddir)/src/gva-cell-renderer-pixbuf.o		\
 	$(top_builddir)/src/gva-column-manager.o		\
 	$(top_builddir)/src/gva-columns.o			\
