--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -3,6 +3,7 @@
 data/gnome-video-arcade.glade
 src/gconf-bridge.c
 src/gva-audit.c
+src/gva-categories.c
 src/gva-column-manager.c
 src/gva-columns.c
 src/gva-history.c
