2007-12-27  Matthew Barnes  <mbarnes@redhat.com>
	* po/POTFILES.in: Specify the encoding as UTF-8.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,5 +1,6 @@
 # List of source files which contain translatable strings.
 
+[encoding: UTF-8]
 data/gnome-video-arcade.glade
 src/gconf-bridge.c
 src/gva-audit.c
