2008-01-26  Matthew Barnes  <mbarnes@redhat.com>
	* configure.ac:
	Check for gnome-icon-theme >= 2.18.0.  The version corresponds to
	the introduction of the 'emblem-default' icon.

	* src/Makefile.am:
	* docs/references/Makefile.am:
	Add GIT_CFLAGS and GIT_LIBS even though they are empty at this time.

--- a/configure.ac
+++ b/configure.ac
@@ -38,6 +38,11 @@ PKG_CHECK_MODULES(GLADE, $GLADE_MODULES)
 AC_SUBST(GLADE_CFLAGS)
 AC_SUBST(GLADE_LIBS)
 
+GIT_MODULES="gnome-icon-theme >= 2.18.0"
+PKG_CHECK_MODULES(GIT, $GIT_MODULES)
+AC_SUBST(GIT_CFLAGS)
+AC_SUBST(GIT_LIBS)
+
 # --with-gnome=[yes|no]
 AC_ARG_WITH([gnome],
         [AC_HELP_STRING([--with-gnome],
