--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,7 +7,7 @@ AM_CFLAGS = \
 	@GLIB_CFLAGS@ @GTK_CFLAGS@ \
 	@GIT_CFLAGS@ @GCONF_CFLAGS@ \
 	@GLADE_CFLAGS@ @GNOME_CFLAGS@ \
-	@SQLITE_CFLAGS@
+	@SQLITE_CFLAGS@ @WNCK_CFLAGS@
 
 # The DATADIR, LIBDIR, PREFIX, and SYSCONFDIR definitions
 # are only needed for libgnome.  GLib handles it better.
@@ -69,6 +69,8 @@ gnome_video_arcade_SOURCES = \
 	gva-ui.h			\
 	gva-util.c			\
 	gva-util.h			\
+	gva-wnck.c			\
+	gva-wnck.h			\
 	main.c
 
 EXTRA_gnome_video_arcade_SOURCES = \
@@ -79,7 +81,8 @@ gnome_video_arcade_LDADD = \
 	@GLIB_LIBS@ @GTK_LIBS@ \
 	@GIT_LIBS@ @GCONF_LIBS@ \
 	@GLADE_LIBS@ @GNOME_LIBS@ \
-	@MAME_BACKEND@ @SQLITE_LIBS@
+	@MAME_BACKEND@ @SQLITE_LIBS@ \
+	@WNCK_LIBS@
 
 gnome_video_arcade_DEPENDENCIES = \
 	@MAME_BACKEND@
