--- a/maint/Makefile.am
+++ b/maint/Makefile.am
@@ -3,7 +3,9 @@
 gladecatalog_DATA = gva.xml
 gladecatalogdir = `$(PKG_CONFIG) --variable=catalogdir gladeui-1.0`
 
-gladepixmap_DATA = widget-gva-column-manager.png
+gladepixmap_DATA = \
+	widget-gva-column-manager.png \
+	widget-gva-link-button.png
 gladepixmapdir = `$(PKG_CONFIG) --variable=pixmapdir gladeui-1.0`/hicolor/22x22/actions
 
 gladegva_LTLIBRARIES = libgladegva.la
@@ -14,7 +16,8 @@ libgladegva_la_CFLAGS = \
 	@GCONF_CFLAGS@
 
 libgladegva_la_SOURCES = \
-	$(top_srcdir)/src/gva-column-manager.c
+	$(top_srcdir)/src/gva-column-manager.c \
+	$(top_srcdir)/src/gva-link-button.c
 
 libgladegva_la_LDFLAGS = \
 	-module -avoid-version
