2009-03-16  Matthew Barnes  <mbarnes@redhat.com>
	* po/POTFILES.in: Add src/gva-nplayers.c.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -14,6 +14,7 @@ src/gva-mame-process.c
 src/gva-mame-sdlmame.c
 src/gva-mame-xmame.c
 src/gva-mute-button.c
+src/gva-nplayers.c
 src/gva-play-back.c
 src/gva-properties.c
 src/gva-tree-view.c
