Fix distcheck errors.

--- a/docs/reference/Makefile.am
+++ b/docs/reference/Makefile.am
@@ -94,6 +94,7 @@ GTKDOC_LIBS=							\
 	$(top_builddir)/src/gva-favorites.o			\
 	$(top_builddir)/src/gva-game-store.o			\
 	$(top_builddir)/src/gva-history.o			\
+	$(top_builddir)/src/gva-input-file.o			\
 	$(top_builddir)/src/gva-link-button.o			\
 	$(top_builddir)/src/gva-main.o				\
 	$(top_builddir)/src/gva-mame-common.o			\
