Use Behdad's git.mk to generate .gitignore files.
Also, add several generated build files to MAINTAINERCLEANFILES.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -49,3 +49,5 @@ DISTCLEANFILES = \
 MAINTAINERCLEANFILES = \
 	gnome-video-arcade.glade.bak	\
 	gnome-video-arcade.gladep.bak
+
+-include $(top_srcdir)/git.mk
