--- a/Makefile.am
+++ b/Makefile.am
@@ -14,12 +14,28 @@ EXTRA_DIST = \
 	intltool-update.in		\
 	mkinstalldirs
 
-DISTCLEANFILES = \
-	gnome-doc-utils.make		\
-	intltool-extract		\
-	intltool-merge			\
-	intltool-update
+MAINTAINERCLEANFILES = \
+	$(srcdir)/INSTALL		\
+	$(srcdir)/aclocal.m4		\
+	$(srcdir)/autoscan.log		\
+	$(srcdir)/compile		\
+	$(srcdir)/config.guess		\
+	$(srcdir)/config.h.in		\
+	$(srcdir)/config.sub		\
+	$(srcdir)/configure.scan	\
+	$(srcdir)/depcomp		\
+	$(srcdir)/install-sh		\
+	$(srcdir)/ltmain.sh		\
+	$(srcdir)/missing		\
+	$(srcdir)/mkinstalldirs		\
+	$(srcdir)/omf.make		\
+	$(srcdir)/xmldocs.make		\
+	$(srcdir)/gtk-doc.make		\
+	$(srcdir)/gnome-doc-utils.make	\
+	`find "$(srcdir)" -type -f -name Makefile.in -print`
 
 DISTCHECK_CONFIGURE_FLAGS =		\
 	--enable-gtk-doc		\
 	--disable-scrollkeeper
+
+-include $(top_srcdir)/git.mk
