--- a/docs/reference/Makefile.am
+++ b/docs/reference/Makefile.am
@@ -74,6 +74,7 @@ INCLUDES=							\
 	-I$(top_srcdir)/src					\
 	-I$(top_builddir)					\
 	-I$(top_builddir)/src					\
+	$(DBUS_CFLAGS)						\
 	$(GLIB_CFLAGS)						\
 	$(GTK_CFLAGS)						\
 	$(GIT_CFLAGS)						\
@@ -82,6 +83,11 @@ INCLUDES=							\
 	$(GNOME_CFLAGS)						\
 	$(SQLITE_CFLAGS)					\
 	$(WNCK_CFLAGS)
+
+if HAVE_DBUS
+DBUS_OBJECTS = $(top_builddir)/src/gva-dbus.o
+endif
+
 GTKDOC_LIBS=							\
 	$(top_builddir)/src/gconf-bridge.o			\
 	$(top_builddir)/src/gva-audit.o				\
@@ -111,6 +117,8 @@ GTKDOC_LIBS=							\
 	$(top_builddir)/src/gva-util.o				\
 	$(top_builddir)/src/gva-wnck.o				\
 	$(top_builddir)/src/@MAME_BACKEND@			\
+	$(DBUS_OBJECTS)						\
+	$(DBUS_LIBS)						\
 	$(GLIB_LIBS)						\
 	$(GTK_LIBS)						\
 	$(GIT_LIBS)						\
