--- a/Makefile.am
+++ b/Makefile.am
@@ -32,6 +32,14 @@ MAINTAINERCLEANFILES = \
 	$(srcdir)/xmldocs.make		\
 	$(srcdir)/gtk-doc.make		\
 	$(srcdir)/gnome-doc-utils.make	\
+	$(srcdir)/m4/gnome-doc-utils.m4	\
+	$(srcdir)/m4/gtk-doc.m4		\
+	$(srcdir)/m4/intltool.m4	\
+	$(srcdir)/m4/libtool.m4		\
+	$(srcdir)/m4/ltoptions.m4	\
+	$(srcdir)/m4/ltsugar.m4		\
+	$(srcdir)/m4/ltversion.m4	\
+	$(srcdir)/m4/lt~obsolete.m4	\
 	`find "$(srcdir)" -type -f -name Makefile.in -print`
 
 DISTCHECK_CONFIGURE_FLAGS =		\
