Add music clips to the Properties window.
This adds an optional dependency on GStreamer.  Music clips are streamed
in MP3 format from http://www.arcade-history.com/.  Music clips are not
yet available for all games, but the collection appears to be growing.

--- a/docs/reference/Makefile.am
+++ b/docs/reference/Makefile.am
@@ -81,6 +81,7 @@ INCLUDES=							\
 	$(GCONF_CFLAGS)						\
 	$(GLADE_CFLAGS)						\
 	$(GNOME_CFLAGS)						\
+	$(GSTREAMER_CFLAGS)					\
 	$(SQLITE_CFLAGS)					\
 	$(WNCK_CFLAGS)
 
@@ -105,6 +106,7 @@ GTKDOC_LIBS=							\
 	$(top_builddir)/src/gva-main.o				\
 	$(top_builddir)/src/gva-mame-common.o			\
 	$(top_builddir)/src/gva-mame-process.o			\
+	$(top_builddir)/src/gva-music-button.o			\
 	$(top_builddir)/src/gva-mute-button.o			\
 	$(top_builddir)/src/gva-nplayers.o			\
 	$(top_builddir)/src/gva-play-back.o			\
@@ -125,6 +127,7 @@ GTKDOC_LIBS=							\
 	$(GCONF_LIBS)						\
 	$(GLADE_LIBS)						\
 	$(GNOME_LIBS)						\
+	$(GSTREAMER_LIBS)					\
 	$(SQLITE_LIBS)						\
 	$(WNCK_LIBS)
 
