--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -14,6 +14,7 @@ src/gva-mame-common.c
 src/gva-mame-process.c
 src/gva-mame-sdlmame.c
 src/gva-mame-xmame.c
+src/gva-music-button.c
 src/gva-mute-button.c
 src/gva-nplayers.c
 src/gva-play-back.c
