Add a TODO file.
This will serve as my ongoing work list, and also a starting point for
anyone that wants to contribute.

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,7 +12,8 @@ EXTRA_DIST = \
 	intltool-extract.in		\
 	intltool-merge.in		\
 	intltool-update.in		\
-	mkinstalldirs
+	mkinstalldirs			\
+	TODO
 
 MAINTAINERCLEANFILES = \
 	$(srcdir)/INSTALL		\
