Add Gtk-Doc tests during "make check".

--- a/docs/reference/Makefile.am
+++ b/docs/reference/Makefile.am
@@ -133,4 +133,6 @@ include $(top_srcdir)/gtk-doc.make
 # e.g. EXTRA_DIST += version.xml.in
 EXTRA_DIST += version.xml.in
 
+TESTS = $(GTKDOC_CHECK)
+
 -include $(top_srcdir)/git.mk
