Add libunique dependency.
GNOME Video Arcade is now a "single-instance" application.  That means
if you launch it while it's already running, it will simply present the
existing window instead of creating a second window.

--- a/configure.ac
+++ b/configure.ac
@@ -48,6 +48,11 @@ PKG_CHECK_MODULES(SQLITE, $SQLITE_MODULES)
 AC_SUBST(SQLITE_CFLAGS)
 AC_SUBST(SQLITE_LIBS)
 
+UNIQUE_MODULES="unique-1.0 >= 1.0"
+PKG_CHECK_MODULES(UNIQUE, $UNIQUE_MODULES)
+AC_SUBST(UNIQUE_CFLAGS)
+AC_SUBST(UNIQUE_LIBS)
+
 # --with-dbus=[yes|no]
 DBUS_CFLAGS=
 DBUS_LIBS=
