--- a/docs/reference/Makefile.am
+++ b/docs/reference/Makefile.am
@@ -81,6 +81,7 @@ INCLUDES=							\
 	$(GCONF_CFLAGS)						\
 	$(GSTREAMER_CFLAGS)					\
 	$(SQLITE_CFLAGS)					\
+	$(UNIQUE_CFLAGS)					\
 	$(WNCK_CFLAGS)
 
 if HAVE_DBUS
@@ -124,6 +125,7 @@ GTKDOC_LIBS=							\
 	$(GCONF_LIBS)						\
 	$(GSTREAMER_LIBS)					\
 	$(SQLITE_LIBS)						\
+	$(UNIQUE_LIBS)						\
 	$(WNCK_LIBS)
 
 # This includes the standard gtk-doc make rules, copied by gtkdocize.
