--- a/maint/Makefile.am
+++ b/maint/Makefile.am
@@ -13,7 +13,8 @@ gladegvadir = `$(PKG_CONFIG) --variable=moduledir gladeui-1.0`
 
 libgladegva_la_CFLAGS = \
 	@GLIB_CFLAGS@ @GTK_CFLAGS@ \
-	@GCONF_CFLAGS@ @GSTREAMER_CFLAGS@
+	@GCONF_CFLAGS@ @GSTREAMER_CFLAGS@ \
+	@UNIQUE_CFLAGS@
 
 libgladegva_la_SOURCES = \
 	$(top_srcdir)/src/gva-column-manager.c \
@@ -25,7 +26,8 @@ libgladegva_la_LDFLAGS = \
 
 libgladegva_la_LIBADD = \
 	@GLIB_LIBS@ @GTK_LIBS@ \
-	@GCONF_LIBS@ @GSTREAMER_LIBS@
+	@GCONF_LIBS@ @GSTREAMER_LIBS@ \
+	@UNIQUE_LIBS@
 
 EXTRA_DIST = \
 	$(gladecatalog_DATA) \
