Added sl for Slovenian translation

--- a/help/Makefile.am
+++ b/help/Makefile.am
@@ -15,6 +15,6 @@ DOC_FIGURES = \
 	figures/gva_recorded_games.png		\
 	figures/gva_search_window.png
 
-DOC_LINGUAS = cs da de es it sv
+DOC_LINGUAS = cs da de es it sl sv
 
 -include $(top_srcdir)/git.mk
